added back script sources

--- a/src/dept-insert.html
+++ b/src/dept-insert.html
@@ -15,5 +15,6 @@
       <button type="button" onclick="insertData()">Submit</button>
       <h3 id="results4"></h3><br>
     </div>
+    <script src="client-call.js"></script>
   </body>
 </html>
