--- a/src/test.html
+++ b/src/test.html
@@ -26,5 +26,6 @@
       <button type="button" onclick="getDataDepartmentInstructor()">Submit</button>
       <h3 id="results3"></h3><br>
     </div>
+    <script src="client-call.js"></script>
   </body>
 </html>
