--- a/src/index.html
+++ b/src/index.html
@@ -29,50 +29,15 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="#Home">Home</a>
-      <a class="active" href=".\index.html">Department</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href=".\index.html">Home</a>
+      <a href=".\course.html">Courses</a>
+      <a href=".\department.html">Department</a>
     </div><br>
 
     <h1 style="text-align:center;">University Department Look Up</h1>
 
     <div>
-      <h2>Look Up Department</h2><br>
-      <p>Enter Department Code: </p>
-      <input type="text" id="dept"></input><br>
-      <button type="button" onclick="getData()">Submit</button>
-      <h3 id="results1"></h3><br>
+      <p style="text-align:left;">University Information Here</p>
     </div>
-
-    <div>
-      <h2>Look Up Department Attributes</h2><br>
-      <p>Enter Department Code: </p>
-      <input type="text" id="deptAll"></input><br>
-      <button type="button" onclick="getDataAll()">Submit</button>
-      <h3 id="results2"></h3><br>
-    </div>
-
-    <div>
-      <h2>Look Up Department and Instructor Attributes</h2><br>
-      <p>Enter Department Code: </p>
-      <input type="text" id="deptInst"></input><br>
-      <button type="button" onclick="getDataDepartmentInstructor()">Submit</button>
-      <h3 id="results3"></h3><br>
-    </div>
-
-    <div>
-      <h2>Enter New Department</h2><br>
-      <p>Enter Department Attributes: </p>
-      <input type="text" id="deptCodeInsert">Code</input><br>
-      <input type="text" id="deptNameInsert">Name</input><br>
-      <input type="text" id="deptOfficeInsert">Office</input><br>
-      <input type="text" id="deptPhoneInsert">Phone</input><br>
-      <input type="text" id="deptChairIdInsert">Chair ID</input><br>
-      <input type="text" id="CStartDateInsert">Start Date</input><br>
-      <button type="button" onclick="insertData()">Submit</button>
-      <h3 id="results4"></h3><br>
-    </div>
-    <script src="client-call.js" defer></script>
   </body>
 </html>
